-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.1.0 , 5.1.1, 5.2.0
-
None
-
0ef673efe8bf381e1aa0202752deac27e86ada53
Creator as shipped with Qt 5.1.0 does not do syntax completion for the usual dialogs in the QtQuick.Dialogs module. src/imports/dialogs/plugins.qmltypes does not mention them.
My theory as to why:
When a C++ plugin registers a QML file as a new type, it's a composite type. qmlplugindump ignores composite types (and contains a TODO to implement dumping later). So we need to make that work in order to provide a smoother development experience. (Or else we have to write those parts of the qmltypes files by hand, but that doesn't seem worthwhile.)