qmlplugindump: Add support for composite types

Task-number: QTBUG-33106

Change-Id: I80fc817eb59256e860f3fdd591104930688ef84c
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>